--- a/frontend/src/components/CategorySection.css
+++ b/frontend/src/components/CategorySection.css
@@ -142,7 +142,7 @@
 
 .shop-now-text:hover {
     background-color: #fff;
-    color: #6a0dad; /* Text color changes on hover */
+    color: #ffff; /* Text color changes on hover */
 }
 
 /* --- Responsive Adjustments --- */
