--- a/frontend/src/pages/SpecialsPage/SpecialsPage.css
+++ b/frontend/src/pages/SpecialsPage/SpecialsPage.css
@@ -147,7 +147,7 @@ body {
 .product-card-price {
     font-size: 1.3rem; /* Slightly larger price */
     font-weight: 700;
-    color: #6a0dad; /* Purple accent for price */
+    color: #ffff; /* Purple accent for price */
     margin-top: auto;
     margin-bottom: 1rem; /* Space above actions */
     display: flex; /* Allow original price to sit next to it */
